--- a/.github/workflows/main-publish.yml
+++ b/.github/workflows/main-publish.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 */3 * * *'
+    # At minute 0 past every 12th hour
+    - cron: '0 */12 * * *'
 
 jobs:
   build:
