--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -6,7 +6,7 @@ on:
       - main
   workflow_dispatch:
   schedule:
-    # Runs At 03:00 erery day.
+    # Runs At 03:00 every day.
     - cron: '0 3 * * *'
 
 jobs:
