--- a/.github/workflows/main-publish.yml
+++ b/.github/workflows/main-publish.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
       - name: checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
       - name: setup node
         uses: actions/setup-node@v1
         with:
@@ -65,6 +65,7 @@ jobs:
          git commit -m "${COMMIT_MSG}"
          git status
       - name: Push by Action
+        if: ${{ ( github.event_name == 'push' && github.ref == 'refs/heads/main' ) || github.base_ref == 'main' }}
         uses: ad-m/github-push-action@v0.6.0 # https://github.com/ad-m/github-push-action#github-action-for-github-push
         with:
           # Token for the repo. Can be passed in using $\{{ secrets.GITHUB_TOKEN }}
